<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ProfileDisplayFragment"
    android:padding="16dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />
            <Button
                android:id="@+id/find_hike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Find Hike Near Me" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bmr_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/bmr_header"
                style="@style/Title.Small" />

            <TextView
                android:id="@+id/bmr_score"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/bmr_header"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bmr_circle"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="BMR Score"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:stretchColumns="0,1">
        <TableRow>
            <TextView
                android:text="@string/name_label"
                android:id="@+id/name_label"
                />
            <TextView
                tools:text="Johnny Appleseed"
                android:id="@+id/name_value"
                />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/age_label"
                android:id="@+id/age_label"
                />
            <TextView
                tools:text="20"
                android:id="@+id/age_value"
                />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/location_label"
                android:id="@+id/location_label"
                />
            <TextView
                tools:text="Salt Lake City, United States"
                android:id="@+id/location_value"
                />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/height_label"
                android:id="@+id/height_label"
                />
            <TextView
                tools:text="6'0''"
                android:id="@+id/height_value"
                />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/weight_label"
                android:id="@+id/weight_label"
                />
            <TextView
                tools:text="180 lbs"
                android:id="@+id/weight_value"
                />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/sex_label"
                android:id="@+id/sex_label"
                />
            <TextView
                tools:text="Vanilla"
                android:id="@+id/sex_value"
                />
        </TableRow>
        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/activity_level_label"
                android:id="@+id/activity_level_label"
                />
            <TextView
                tools:text="Moderate"
                android:id="@+id/activity_level_value"
                />
        </TableRow>
    </TableLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="Edit Profile"
        android:id="@+id/editButton"
        />

</LinearLayout>